Adding new enhancement in RDWReader (Help from ChatGPT)