@@ -10,14 +10,14 @@ import org.hablo.rdw.RDWReader;
 import org.jpos.ee.BLException;
 import org.jpos.iso.ISOException;
 import org.jpos.iso.ISOMsg;
+import org.jpos.iso.ISOUtil;
 import org.jpos.iso.packager.GenericPackager;
 import org.jpos.util.Logger;
 
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.UnsupportedEncodingException;
-import java.nio.file.Files;
-import java.util.HashMap;
+import java.lang.reflect.InvocationTargetException;
 
 import static org.hablo.helper.ISOMsgHelper.createISOMsg;
 
@@ -34,19 +34,29 @@ public class T112Parser extends FileParserSupport {
 
     @Override
     public void parse(File file) {
-        String ENCODING = MC_IPM_EBCDIC;
+        String encoding = MC_IPM;
         int counter = 0;
-        try (RDWReader reader = new RDWReader(Files.newInputStream(file.toPath()))) {
-            byte[] r = reader.read();
-            GenericPackager packager = new GenericPackager("jar:packager/" + ENCODING);
-            packager.setLogger(Logger.getLogger("Q2"), "packager");
-            while (r != null && r.length > 0) {
+        try (RDWReader reader = new RDWReader(file.getPath())) {
+            reader.open();
+
+            GenericPackager packager = null;
+
+            byte[] r;
+            while ((r = reader.read()) != null) {
+                if (packager == null) {
+                    if (ISOUtil.hexString(new byte[]{r[0]}).startsWith("F")) {
+                        encoding = MC_IPM_EBCDIC;
+                    }
+                    packager = new GenericPackager("jar:packager/" + encoding);
+                    packager.setLogger(Logger.getLogger("Q2"), "packager");
+                }
+
                 ISOMsg msg = createISOMsg(r, packager);
                 if (outputParsedFile && (StringUtils.isBlank(mtiFilter) || mtiFilter.contains(msg.getMTI()))) {
                     writer.write(ISOMsgHelper.toString(msg));
                     //dump description
                     String key = msg.getMTI() + "." + msg.getString(24);
-                    if(seConverter.hasKey(key)) {
+                    if (seConverter.hasKey(key)) {
                         String description = seConverter.convert(key);
                         writer.write("<!-- ########### " + description + " ########### -->");
                         writer.newLine();
@@ -58,8 +68,6 @@ public class T112Parser extends FileParserSupport {
                 if (counter % 100 == 0) {
                     writer.flush();
                 }
-
-                r = reader.read();
                 counter++;
             }
         } catch (FileNotFoundException e) {
@@ -73,14 +81,15 @@ public class T112Parser extends FileParserSupport {
 
     public static <T> String parseDE(Class<T> clazz, ISOMsg m) throws BLException {
         try {
-            T o = clazz.newInstance();
+            T o = clazz.getDeclaredConstructor().newInstance();
             if (o instanceof ParserSupport) {
                 ((ParserSupport) o).parse(m);
                 return ISOMsgHelper.toString((ParserSupport) o);
             } else {
                 System.err.println("Unknown class type: " + clazz.getSimpleName());
             }
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException |
+                 ClassNotFoundException e) {
             throw new RuntimeException(e);
         } catch (BLException | ISOException | UnsupportedEncodingException blException) {
             blException.printStackTrace();
